fix modal when display on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -25,6 +25,10 @@
         max-width: 226px;
         min-height: auto;
     }
+
+    .defaut-location {
+        max-width: 380px;
+    }
 }
 
 /* Mobile & Tablet  */
@@ -564,14 +568,30 @@
         transform: translateY(-50%);
     }
 
+    /* Modal  */
     .modal {}
 
     .location-box {
-        width: 100%;
-        height: 100%;
-        position: absolute;
+        /* width: 100%; */
+        /* height: 100%; */
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         z-index: 100;
     }
+
+    .js-header__address {
+        z-index: 0;
+    }
+
+    .location-close {
+        padding: 6px 8px 0px 8px;
+    }
+
 }
 
 /* Tablet  */
@@ -585,5 +605,9 @@
 
     .wrap-mobile {
         flex-wrap: wrap;
+    }
+
+    .input-location {
+        font-size: 1.4rem;
     }
 }
